--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .container{
   margin-top: 30px !important;
   margin-bottom: 20px !important;
+  margin-left: 60px;
+  margin-right: 60px;
+  font-size: 5vmin;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .card-header{
